--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-name: lightDummy
+name: cactusclicker
 author: lightPlugins
 version: 0.1.0
-main: io.lightplugins.dummy.Light
-api-version: 1.13
+main: io.lightplugins.cactusclicker.Light
+api-version: 1.20
 depend: []
 softdepend: []
 loadbefore: []
@@ -10,6 +10,6 @@ libraries: []
 #  - org.mariadb.jdbc:mariadb-java-client:2.7.4
 #  - com.zaxxer:HikariCP:5.1.0
 commands:
-  lightdummy:
+  cc:
     description: The root command for lightEconomy overall
     aliases: [dummy]
